--- a/build.yaml
+++ b/build.yaml
@@ -15,3 +15,7 @@
 include:
   - board: bt60_v1_hs
   - board: planck_rev6
+  - board: nice_nano_v2
+    shield: splitkb_aurora_corne_left
+  - board: nice_nano_v2
+    shield: splitkb_aurora_corne_right
