--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -6,4 +6,10 @@
 # CONFIG_ZMK_DISPLAY=y
 
 # Uncomment the following lines to enable RGB underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=24
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=100
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
