--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -13,3 +13,6 @@ CONFIG_ZMK_RGB_UNDERGLOW=n
 #CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
 #CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=100
 #CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
+
+CONFIG_BT_MAX_CONN=3
+CONFIG_BT_MAX_PAIRED=3
