--- a/build.yaml
+++ b/build.yaml
@@ -19,3 +19,4 @@ include:
     shield: splitkb_aurora_corne_left
   - board: nice_nano_v2
     shield: splitkb_aurora_corne_right
+  - board: preonic_rev3
