--- a/config/bt60_v1_hs.conf
+++ b/config/bt60_v1_hs.conf
@@ -2,3 +2,6 @@
 CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+
+CONFIG_BT_MAX_CONN=2
+CONFIG_BT_MAX_PAIRED=2
