We so back/mac baby

--- a/config/bt60_v1_hs.conf
+++ b/config/bt60_v1_hs.conf
@@ -1,7 +1,13 @@
 # Put configuration options here
-CONFIG_ZMK_IDLE_TIMEOUT=30000 # Milliseconds of inactivity before entering idle state
-CONFIG_ZMK_SLEEP=y # Enable deep sleep support
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000 # Milliseconds of inactivity before entering deep sleep
-CONFIG_BT_BAS=n # Disable the Bluetooth BAS (battery reporting service)
-CONFIG_BT_MAX_CONN=3 # Maximum number of simultaneous Bluetooth connections
-CONFIG_BT_MAX_PAIRED=3 # Maximum number of paired Bluetooth devices
+# Milliseconds of inactivity before entering idle state
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+# Enable deep sleep support
+CONFIG_ZMK_SLEEP=y
+# Milliseconds of inactivity before entering deep sleep
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+# Disable the Bluetooth BAS (battery reporting service)
+CONFIG_BT_BAS=n
+# Maximum number of simultaneous Bluetooth connections
+CONFIG_BT_MAX_CONN=3
+# Maximum number of paired Bluetooth devices
+CONFIG_BT_MAX_PAIRED=3
